<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/categoryGroup"
        android:title="@string/settings_category_label">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/world"
                    android:checked="false"
                    android:icon="@drawable/world"
                    android:title="@string/settings_category_world_label" />

                <item
                    android:id="@+id/politics"
                    android:checked="false"
                    android:icon="@drawable/politics"
                    android:title="@string/settings_category_politics_label" />

                <item
                    android:id="@+id/education"
                    android:checked="false"
                    android:icon="@drawable/education"
                    android:title="@string/settings_category_education_label" />

                <item
                    android:id="@+id/sports"
                    android:checked="false"
                    android:icon="@drawable/sports"
                    android:title="@string/settings_category_sport_label" />

                <item
                    android:id="@+id/business"
                    android:checked="false"
                    android:icon="@drawable/business"
                    android:title="@string/settings_category_business_label" />

                <item
                    android:id="@+id/technology"
                    android:checked="false"
                    android:icon="@drawable/technology"
                    android:title="@string/settings_category_tech_label" />

                <item
                    android:id="@+id/opinion"
                    android:checked="false"
                    android:icon="@drawable/opinion"
                    android:title="@string/settings_category_opinion_label" />

                <item
                    android:id="@+id/culture"
                    android:checked="false"
                    android:icon="@drawable/culture"
                    android:title="@string/settings_category_culture_label" />

                <item
                    android:id="@+id/travel"
                    android:checked="false"
                    android:icon="@drawable/travel"
                    android:title="@string/settings_category_travel_label" />

                <item
                    android:id="@+id/football"
                    android:checked="false"
                    android:icon="@drawable/football"
                    android:title="@string/settings_category_football_label" />

                <item
                    android:id="@+id/fashion"
                    android:checked="false"
                    android:icon="@drawable/fashion"
                    android:title="@string/settings_category_fashion_label" />

                <item
                    android:id="@+id/lifestyle"
                    android:checked="false"
                    android:icon="@drawable/lifestyle"
                    android:title="@string/settings_category_lifestyle_label" />

                <item
                    android:id="@+id/environment"
                    android:checked="false"
                    android:icon="@drawable/environment"
                    android:title="@string/settings_category_environment_label" />

            </group>
        </menu>
    </item>

</menu>